crates/aranya-policy-compiler/tests/data/structs/literal_duplicate_field_already_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: the name `x` is defined multiple times
  |
6 |         x: 1,
  |         - previous defintion here
7 |         x: 2,
  |         ^ re-defined here
